add and change queries

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -32,8 +32,8 @@ sphinx:
 #    install:
 #    - requirements: docs/requirements.txt
 
-# python:
-#  version: 3.12
-#  install:
-#    - method: poetry
-#      path: .
+python:
+  version: 3.12
+  install:
+  - method: poetry
+      path: .
