--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -32,8 +32,15 @@ sphinx:
 #    install:
 #    - requirements: docs/requirements.txt
 
+# python:
+#   version: 3.12
+#   install:
+#   - method: poetry
+#     path: .
+
 python:
   version: 3.12
   install:
-  - method: poetry
-    path: .
+  - method: pip
+    path: docs/
+    requirements: requirements.txt
