try load read the docs v5

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -40,6 +40,13 @@ sphinx:
 
 python:
   install:
-  - method: pip
+  - type: pip
     path: docs/
     requirements: requirements.txt
+
+# python:
+#   install:
+#   - type: pip
+#     path: .
+#     extra_requirements:
+#       - docs
