--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -25,22 +25,10 @@ sphinx:
 #    - pdf
 #    - epub
 
-# Optional but recommended, declare the Python requirements required
-# to build your documentation
-# See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
-# python:
-#    install:
-#    - requirements: docs/requirements.txt
-
-# python:
-#   version: 3.12
-#   install:
-#   - method: poetry
-#     path: .
-
 python:
   install:
-  - type: pip
-    path: .
-    extra_requirements:
-      - docs
+    - requirements: docs/requirements.txt
+    - method: pip
+      path: .
+      extra_requirements:
+        - docs
