--- a/docs/Makefile
+++ b/docs/Makefile
@@ -6,7 +6,8 @@
 SPHINXOPTS    ?=
 SPHINXBUILD   ?= sphinx-build
 SOURCEDIR     = .
-BUILDDIR      = _build
+# BUILDDIR      = _build
+BUILDDIR      = $(if $(READTHEDOCS),$(READTHEDOCS_OUTPUT)/html,_build)
 
 # Put it first so that "make" without argument is like "make help".
 help:
