--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ requests = "^2.32.3"
 pyreadstat = "^1.2.7"
 bs4 = "^0.0.2"
 lxml = "^5.3.0"
+dask = {extras = ["distributed"], version = "^2024.8.0"}
 
 
 [tool.poetry.group.dev.dependencies]
