--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,3 +28,6 @@ pre-commit = "^3.8.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+mynhanes = "mynhanes.manage:main"
