--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ bs4 = "^0.0.2"
 lxml = "^5.3.0"
 dask = {extras = ["distributed"], version = "^2024.8.0"}
 jupyter = "^1.0.0"
+html5lib = "^1.1"
 
 
 [tool.poetry.group.dev.dependencies]
